@@ -287,7 +287,7 @@ public class ShardCollectSource extends AbstractComponent implements CollectSour
 
         RowConsumer firstConsumer = ProjectingRowConsumer.create(
             lastConsumer,
-            Projections.nodeProjections(normalizedPhase.projections()),
+            normalizedPhase.projections(),
             collectPhase.jobId(),
             jobCollectContext.queryPhaseRamAccountingContext(),
             sharedProjectorFactory
