@@ -25,10 +25,13 @@ package io.crate.execution.engine.pipeline;
 import io.crate.breaker.RamAccountingContext;
 import io.crate.data.Projector;
 import io.crate.execution.dsl.projection.Projection;
+import io.crate.metadata.RowGranularity;
 
 import java.util.UUID;
 
 public interface ProjectorFactory {
 
     Projector create(Projection projection, RamAccountingContext ramAccountingContext, UUID jobId);
+
+    RowGranularity supportedGranularity();
 }
