@@ -738,6 +738,15 @@ public class PartitionedTableIntegrationTest extends SQLTransportIntegrationTest
         assertThat(response.rowCount(), is(1L));
     }
 
+    @Test
+    public void testUpdateByQueryOnEmptyPartitionedTable() {
+        execute("create table empty_parted(id integer, timestamp timestamp) " +
+                "partitioned by(timestamp) with (number_of_replicas=0)");
+        ensureYellow();
+
+        execute("update empty_parted set id = 10 where timestamp = 1396303200000");
+        assertThat(response.rowCount(), is(0L));
+    }
 
     @Test
     public void testDeleteFromPartitionedTable() throws Exception {
@@ -903,6 +912,16 @@ public class PartitionedTableIntegrationTest extends SQLTransportIntegrationTest
         refresh();
         execute("select * from quotes");
         assertThat(response.rowCount(), is(1L));
+    }
+
+    @Test
+    public void testDeleteByQueryFromEmptyPartitionedTable() {
+        execute("create table empty_parted (id integer, timestamp timestamp) " +
+                "partitioned by(timestamp) with (number_of_replicas=0)");
+        ensureYellow();
+
+        execute("delete from empty_parted where not timestamp = 1396303200000");
+        assertThat(response.rowCount(), is(0L));
     }
 
     @Test
